# llcsv

./: CMakeLists.txt  Makefile  README.md  git-notes.txt  install-llcsv.bat  install-llcsv.csh  make-backup.csh  update-bin.csh
.github/workflows/: build.yml
llcsv/: Makefile  build.csh  llcsv.cpp  suputils.cpp
llcsv-ms/: llcsv.sln  llcsv.vcxproj
llcsv.xcodeproj/: project.pbxproj
llcsv/csvcmds/: csvaction.h  csvadjustcolumns.cpp  csvadjustcolumns.h  csvappendcolumns.cpp  csvappendcolumns.h  csvappendrows.cpp  csvappendrows.h  csvcmd.h  csvcmds.cpp  csvcmds.h  csverror.h  csvfiles.h  csvformatcolumns.cpp  csvformatcolumns.h  csvgeneratecolumns.cpp  csvgeneratecolumns.h  csvinputbuffer.cpp  csvinputbuffer.h  csvinputfiles.cpp  csvinputfiles.h  csvinputpipe.cpp  csvinputpipe.h  csvinputs.h  csvjoincolumns.cpp  csvjoincolumns.h  csvmatchcolumns.cpp  csvmatchcolumns.h  csvmodify.h  csvoutput.cpp  csvoutput.h  csvoutputfile.cpp  csvoutputfile.h  csvoutputtable.cpp  csvoutputtable.h  csvoutputtranspose.cpp  csvoutputtranspose.h  csvreplacecolumns.cpp  csvreplacecolumns.h  csvrowdata.h  csvselect.h  (+12 more)
llcsv/util/: Colors.h  SwapStream.h  catch.hpp  directory.cpp  directory.h  fileutils.cpp  fileutils.h  filters.h  ll_stdhdr.h  lstring.h  range.h  split.h  strutils.h  utils.h
